<resources>
    <string name="app_name" translatable="false">Doctoraak Vendor</string>
    <string name="map_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD4ow5PXyqH-gJwe2rzihxG71prgt4NRFQ</string>
    <string name="we_accept_api_key" templateMergeStrategy="preserve" translatable="false">ZXlKMGVYQWlPaUpLVjFRaUxDSmhiR2NpT2lKSVV6VXhNaUo5LmV5SndjbTltYVd4bFgzQnJJam94TWpZMU5Td2libUZ0WlNJNklqRTFPVEl5TVRNM09UVXVORGd5TWpjMklpd2lZMnhoYzNNaU9pSk5aWEpqYUdGdWRDSjkuYzJZVmFhbE1hUmtudzB3RjVKcTNzUWdFQU9QQ2xtd1d3N2RCdXotekxiWnduZkl0ZEh6Y1NsT3gtOURnM1Eyc2sybXl5WFktZ29HcXhqdVVRVGdrdHc=</string>
    <string name="language_key" translatable="false">@string/english_key</string>
    <string name="english_key" translatable="false">en</string>
    <string name="arabic_key" translatable="false">ar</string>
    <string name="copyright_">Copyright \u00A9 by Doctoraak </string>
    <string name="doctoraak">Doctoraak</string>
    <string name="doctor">Doctor</string>
    <string name="medical_center">Medical center</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="sign_in_to_your_account">Sign In to your Account</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="forget_password_">Forget Password</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="verify">Verify</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="birthday">Birthday</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="check_your_mobile_for_sms_code">Check your mobile for Sms code</string>
    <string name="confirm">Confirm</string>
    <string name="verification_code">Verification Code</string>
    <string name="did_not_receive_sms">Did not receive SMS?</string>
    <string name="resend">Resend again</string>
    <string name="welcome">Welcome</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="lab">Lab</string>
    <string name="medical_lab">Medical lab</string>
    <string name="incubation">Incubation</string>
    <string name="radiology">Radiology</string>
    <string name="search">Search</string>
    <string name="insurance">Insurance</string>
    <string name="select_your_location">select your Location</string>
    <string name="email">Email</string>
    <string name="cv">CV</string>
    <string name="working_hours">Working hours</string>
    <string name="fees">Fees</string>
    <string name="shift_1">Shift 1</string>
    <string name="shift_2">Shift 2</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_">Delivery ?</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="pick_location">pick location</string>
    <string name="see_location_on_map">See location on map</string>
    <string name="back">Back</string>
    <string name="rest_password">Rest Password</string>
    <string name="i_m_a__">I\'m a \n</string>
    <string name="hello">Hello</string>
    <string name="create_doctor_account">Create Doctor account</string>
    <string name="create_medical_center_account">Create Medical Center account</string>
    <string name="create_optical_center_account">Create Optical Center account</string>
    <string name="create_hospital_account">Create Hospital account</string>
    <string name="upload_cv">upload CV</string>
    <string name="next">Next</string>
    <string name="create_clinic">Create clinic</string>
    <string name="create_pharmacy_account">Create Pharmacy account</string>
    <string name="create_lab_account">Create Lab account</string>
    <string name="create_radiology_account">Create Radiology account</string>
    <string name="create">Create</string>
    <string name="upload_photo">Upload photo</string>
    <string name="pharmacy_data">Pharmacy data</string>
    <string name="lab_data">Lab data</string>
    <string name="center_data">Center data</string>
    <string name="waiting_hours">Waiting hours</string>
    <string name="thank_you_for_registration">Thank you for registration</string>
    <string name="do_you_have_another_clinic">Do you have another clinic?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fawry">Fawry</string>
    <string name="vodafone">Vodafone</string>
    <string name="reciept_">Receipt:</string>
    <string name="subscribe_now">Subscribe Now!</string>
    <string name="enter_code">Enter Code</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="title_activity_main00">Main00Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="add_clinic">Add clinic</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Setting</string>
    <string name="available">Available</string>
    <string name="all">All</string>
    <string name="_new">New</string>
    <string name="consultation">Consultation</string>
    <string name="consultation_fees">Consultation fees</string>
    <string name="_continue">Follow up</string>
    <string name="cancel">Cancel</string>
    <string name="type">Type</string>
    <string name="reservation_number">Reservation number</string>
    <string name="reservations">Reservations</string>
    <string name="notes">Notes</string>
    <string name="edit">Edit</string>
    <string name="prescription">Prescription</string>
    <string name="is_not_valid">is not valid</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="bad_request">Bad Request</string>
    <string name="request_not_found">Request not found</string>
    <string name="server_error">Server error</string>
    <string name="unauthorized_user">Unauthorized User</string>
    <string name="service_unavailable">Service Unavailable temporarily</string>
    <string name="not_connected_to_network">Not connected to network</string>
    <string name="file_not_found_">File not found</string>
    <string name="network_error">Problem in Internet</string>
    <string name="empty_field">Empty Field</string>
    <string name="enter_your_">Enter your</string>
    <string name="password_fields_didt_match">Password fields did\'t match</string>
    <string name="password_must_be_larger_7">Password must be bigger than 5 digits</string>
    <string name="phone_must_be_equal_11">Phone must be = 11 digits</string>
    <string name="could_not_find_this_image">Could not find this image</string>
    <string name="approve_terms_and_conditions">Approve terms and conditions</string>
    <string name="request_permission">Request permission</string>
    <string name="ok">OK</string>
    <string name="read_external_storage_permission_msg">this permission is needed for picking an image from Gallery</string>
    <string name="select_image">select image</string>
    <string name="select_your_insurance_company">Select your insurance companies</string>
    <string name="sms_sent_to_phone">SMS will be sent to phone</string>
    <string name="success">Success</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="degree">degree</string>
    <string name="specialization">Specialization</string>
    <string name="sms_code">Sms code</string>
    <string name="file_not_found">File not found</string>
    <string name="pick_a_file">Pick a file</string>
    <string name="pick_your_cv">Pick your CV</string>
    <string name="image_not_found">Image not found</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="select_your_specialization">Select your specialization</string>
    <string name="select_your_degree">Select your degree</string>
    <string name="loading_insurance_companies">Loading Insurance companies</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="city_is_required">City is required</string>
    <string name="area_is_required">Area is required</string>
    <string name="pick_clinic_address">Pick clinic address</string>
    <string name="pick_address">Pick address</string>
    <string name="value_equal_zero">Value equal zero</string>
    <string name="select_your_working_hours">Select your working hours</string>
    <string name="preview">Preview</string>
    <string name="location_picker">Location Picker</string>
    <string name="select_location">Select location</string>
    <string name="no_location_was_selected">No Location was selected</string>
    <string name="request_location_permission">request Location Permission</string>
    <string name="this_permission_is_required_for_getting_location">this Permission is required for getting Current Location</string>
    <string name="location_is_set">location is Set</string>
    <string name="io_exception_cant_get_location">Can\'t get address Reselect Location and Try Again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="active_this_day_first">Active this day first</string>
    <string name="loading">Loading</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="dr_">Dr.</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="are_you_sure_you_want_to_cancel_this_order_">Are you sure you want to cancel this Order ?</string>
    <string name="are_you_sure_you_want_to_accept_this_order_">Are you sure you want to accept this Order ?</string>
    <string name="accept_order_only_if_you_have_all_its_medicines">Accept order only if you have all it\'s medicines</string>
    <string name="analysis">Analysis</string>
    <string name="clinic">Clinic</string>
    <string name="are_you_sure_you_want_to_update_profile_">Are you sure you want to update profile?</string>
    <string name="are_you_sure_you_want_to_update_clinic_">Are you sure you want to update Clinic?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="no_available_days">No available days</string>
    <string name="notification">Notification</string>
    <string name="notification_channel_id" translatable="false">DOCTORAAK_</string>
    <string name="start_time_is_required_or_deactivate_day">start time is required or deactivate day</string>
    <string name="end_time_is_required_or_deactivate_day">end time is required or deactivate day</string>
    <string name="sms_code_is_resent">Sms code is re-sent</string>
    <string name="you_have_no_clinics">You have no Clinics</string>
    <string name="hospital">Hospital</string>
    <string name="optical_center">Optical center</string>
</resources>