<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_def"
            android:iconTint="@color/ColorMainAccent"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:iconTint="@color/ColorMainAccent"
            android:title="@string/calendar" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification"
            android:iconTint="@color/ColorMainAccent"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_chart"
            android:iconTint="@color/ColorMainAccent"
            android:title="@string/analysis" />

    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_phone_white"
                android:iconTint="@color/ColorMainAccent"
                android:title="@string/contact_us" />

            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_language"
                android:iconTint="@color/ColorMainAccent"
                android:title="@string/language" />

            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
