<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <merge>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_splash_background"
            tools:context=".ui.UserTypeActivity">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo_icon" />

            <com.doctoraak.doctoraakdoctor.customView.ITCardView
                android:id="@+id/itcv_hospital"
                style="@style/ITCardViewStyle"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintVertical_bias="0.7"
                app:layout_constraintVertical_chainStyle="packed"
                app:image_background="@drawable/ic_medical_center"
                app:image_scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@id/itcv_medical_center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo"
                app:text_text_bold="@string/hospital"
                app:text_text_normal="@string/i_m_a__" />

            <com.doctoraak.doctoraakdoctor.customView.ITCardView
                android:id="@+id/itcv_medical_center"
                style="@style/ITCardViewStyle"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                app:image_background="@drawable/ic_medical_center"
                app:image_scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@id/itcv_optical_center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itcv_hospital"
                app:text_text_bold="@string/medical_center"
                app:text_text_normal="@string/i_m_a__" />

            <com.doctoraak.doctoraakdoctor.customView.ITCardView
                android:id="@+id/itcv_optical_center"
                style="@style/ITCardViewStyle"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                app:image_background="@drawable/ic_medical_center"
                app:image_scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@id/itcv_doctor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itcv_medical_center"
                app:layout_constraintVertical_bias="0.7"
                app:layout_constraintVertical_chainStyle="packed"
                app:text_text_bold="@string/optical_center"
                app:text_text_normal="@string/i_m_a__" />

            <com.doctoraak.doctoraakdoctor.customView.ITCardView
                android:id="@+id/itcv_doctor"
                style="@style/ITCardViewStyle"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:image_background="@drawable/ic_doctor_type"
                app:image_scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@id/itcv_pharmacy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itcv_optical_center"
                app:text_text_bold="@string/doctor"
                app:text_text_normal="@string/i_m_a__" />

            <com.doctoraak.doctoraakdoctor.customView.ITCardView
                android:id="@+id/itcv_pharmacy"
                style="@style/ITCardViewStyle"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:image_background="@drawable/ic_pharmacy_type"
                app:image_scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@id/itcv_lab"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itcv_doctor"
                app:text_text_bold="@string/pharmacy"
                app:text_text_normal="@string/i_m_a__" />

            <com.doctoraak.doctoraakdoctor.customView.ITCardView
                android:id="@+id/itcv_lab"
                style="@style/ITCardViewStyle"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:image_background="@drawable/ic_lab_type"
                app:layout_constraintBottom_toTopOf="@id/itcv_radiology"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itcv_pharmacy"
                app:text_text_bold="@string/medical_lab"
                app:text_text_normal="@string/i_m_a__" />

            <com.doctoraak.doctoraakdoctor.customView.ITCardView
                android:id="@+id/itcv_radiology"
                style="@style/ITCardViewStyle"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="4dp"
                app:image_background="@drawable/ic_radiology_type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itcv_lab"
                app:text_text_bold="@string/radiology"
                app:text_text_normal="@string/i_m_a__" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/view_group_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </merge>
</layout>