<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <data>-->
<!--        <variable-->
<!--            name="clickHandler"-->
<!--            type="com.example.doctoraakdoctor.ui.signUpClinic.ClinicSignUpActivity.ClinicSignUpClickHandler" />-->
<!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_group"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_thanks_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/thank_you_for_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@+id/tv_another"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/do_you_have_another_clinic"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <Button
            android:id="@+id/btn_yes"
            style="@style/ButtonNormal"
            android:layout_width="0dp"
            android:text="@string/yes"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_no"
            app:layout_constraintTop_toBottomOf="@+id/tv_another"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_max="300dp" />

        <Button
            android:id="@+id/btn_no"
            style="@style/ButtonNormal"
            android:layout_width="0dp"
            android:background="@drawable/rect_corner_border"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/btn_yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_yes"
            app:layout_constraintWidth_max="300dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>