<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <HorizontalScrollView android:id="@+id/scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/rg_reservation_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <RadioButton
                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/selector_reservation_type"
                android:button="@null"
                android:checked="true"
                android:textColor="@drawable/color_doctor_bubble"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/all" />

            <RadioButton
                android:id="@+id/tv_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:textColor="@drawable/color_doctor_bubble"
                android:background="@drawable/selector_reservation_type"
                android:button="@null"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/_new" />

            <RadioButton
                android:id="@+id/tv_consultation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:textColor="@drawable/color_doctor_bubble"
                android:background="@drawable/selector_reservation_type"
                android:button="@null"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/consultation" />

            <RadioButton
                android:id="@+id/tv_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:textColor="@drawable/color_doctor_bubble"
                android:background="@drawable/selector_reservation_type"
                android:button="@null"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/_continue" />

        </RadioGroup>

    </HorizontalScrollView>
</layout>